# toe-decoherence-validation

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  LICENSE-docs  MANIFEST.in  README.md  pyproject.toml
docs/: ONE_CLAIM_PAPER.md
plots/: checksums.sha256
scripts/: checksum_plots.py
src/toe_decoherence_validation/: analyze.py  evaluate_bk18.py  evaluate_bk18_map.py  joint_analysis.py  mukhanov_sasaki.py  run_mcmc.py  toe_theory.py
