[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toe-decoherence-validation"
version = "1.0.0"
description = "Empirical validation of the Theory of Everything (ToE) consistency relation using BK18+Planck2018+BAO data and three-channel joint analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Raman Marozau" }
]
keywords = [
  "cosmology",
  "theory-of-everything",
  "decoherence",
  "entanglement",
  "consistency-relation",
  "BK18",
  "Planck-2018",
  "Mukhanov-Sasaki",
  "Bogoliubov",
  "CMB",
  "B-modes"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
mcmc = [
  "cobaya>=3.3",
  "camb>=1.5",
  "getdist>=1.4",
]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/morozow/toe-decoherence-validation"
Repository = "https://github.com/morozow/toe-decoherence-validation"
Issues = "https://github.com/morozow/toe-decoherence-validation/issues"
Documentation = "https://github.com/morozow/toe-decoherence-validation/blob/main/toe_error_evaluation/README.md"

[project.scripts]
toe-eval-bk18 = "toe_decoherence_validation.evaluate_bk18:main"
toe-eval-map = "toe_decoherence_validation.evaluate_bk18_map:main"
toe-joint = "toe_decoherence_validation.joint_analysis:main"
toe-run-mcmc = "toe_decoherence_validation.run_mcmc:main"
toe-analyze = "toe_decoherence_validation.analyze:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
toe_decoherence_validation = ["plots/*.png"]
